tests/errors/parser/sig-missing-comma.expect
---CODE---
1
---STDERR---
Error: Failed to parse `tests/errors/parser/sig-missing-comma.futil`:  --> 3:5
  |
3 |     b: 2
  |     ^
  |
  = expected comma
